<resources>
    <string name="app_name">旅游精灵</string>
    <string name="no_found_network">无网络连接</string>
    <string name="loading">Loading…</string>
    <string name="loadFail">没有网络</string>
    <string name="loadFail_reload">这里空空如也</string>
    <string name="no_data">没有内容</string>
    <string name="near_the_scenic_spot">附近景区</string>
    <string name="my_the_scenic_spot">我的景区</string>
    <string name="activation_code">我的激活码</string>
    <string name="hot_scenic_spot">热门景区</string>
    <string name="distance">距离您%skm</string>
    <string name="scenic_spot_count">%s个景点</string>
    <string name="automatic_navigation">自动导览</string>
    <string name="home">首页</string>
    <string name="scenic_spot">景区</string>
    <string name="elf_said">精灵说</string>
    <string name="my">我的</string>
    <string name="Destination_attractions">目的地/景点</string>
    <string name="Destination_attractions_strategies_elves">目的地/景点/攻略/精灵说</string>
    <string name="provinces">省份</string>
    <string name="Scenic_area_in_the_province">省内景区</string>
    <string name="select_city">选择城市</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
