<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_search_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp44"
        android:background="@color/color_state">

        <RelativeLayout
            android:id="@+id/main_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp22"
            android:layout_marginRight="@dimen/dp22"
            android:layout_marginTop="@dimen/dp5"
            android:background="@drawable/round_white">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@mipmap/ic_sousuo"
                android:drawablePadding="@dimen/dp5"
                android:gravity="center_vertical"
                android:text="景区名称/城市/攻略/精灵说等" />

        </RelativeLayout>
    </RelativeLayout>

    <com.tourismelves.view.widget.viewpager.NoScrollViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp44"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_scenic_spot"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp44"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/scenic_spot"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_elf_said"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp44"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/elf_said"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_my"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp44"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</LinearLayout>
