<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tourismelves.view.widget.swipetoloadlayout.SwipeToLoadLayout
        android:id="@+id/swipeToLoadLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <include
            android:id="@id/swipe_refresh_header"
            layout="@layout/layout_twitter_header" />

        <com.tourismelves.view.widget.custom.CustomScrollView
            android:id="@id/swipe_target"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.tourismelves.view.widget.viewpager.AutoPlayViewPager
                        android:id="@+id/home_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp154" />

                    <LinearLayout
                        android:id="@+id/home_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp16"
                        android:layout_alignBottom="@id/home_viewpager"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/dp10"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dp5"
                        android:paddingRight="@dimen/dp5" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp44">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/home_near_scenic_spot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/ic_launcher_round"
                        android:gravity="center_vertical"
                        android:text="@string/near_the_scenic_spot"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/home_my_scenic_spot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/ic_launcher_round"
                        android:gravity="center_vertical"
                        android:text="@string/my_the_scenic_spot"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/home_activation_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/ic_launcher_round"
                        android:gravity="center_vertical"
                        android:text="@string/activation_code"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />
                </LinearLayout>

                <com.tourismelves.view.widget.custom.CustomRecyclerView
                    android:id="@+id/home_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </com.tourismelves.view.widget.custom.CustomScrollView>

        <include
            android:id="@id/swipe_load_more_footer"
            layout="@layout/layout_classic_footer" />

    </com.tourismelves.view.widget.swipetoloadlayout.SwipeToLoadLayout>
</LinearLayout>